PROJECT( tellstick )

if(BUILD_LIBTELLDUS-CORE)
	ADD_SUBDIRECTORY(libtelldus-core)
endif(BUILD_LIBTELLDUS-CORE)


IF (WIN32)
	SET(BUILD_TELLUSBD101	TRUE	CACHE BOOL "Build wrapper TellUsbD101.dll")
	IF (BUILD_TELLUSBD101)
		ADD_SUBDIRECTORY(TellUsbD101)
	ENDIF (BUILD_TELLUSBD101)
ENDIF (WIN32)

ADD_SUBDIRECTORY(bindings)