PROJECT(tdtool)

SET(tdtool_SRCS
  main.cpp
)

ADD_EXECUTABLE(tdtool
  ${tdtool_SRCS}
)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_SOURCE_DIR}/driver
)

ADD_DEFINITIONS( -DVERSION='"${DISPLAYED_VERSION}"' )

IF (APPLE)
	TARGET_LINK_LIBRARIES(tdtool
		TelldusCore
	)
ELSE (APPLE)
	TARGET_LINK_LIBRARIES(tdtool
		telldus-core
	)
ENDIF (APPLE)

INSTALL(TARGETS tdtool RUNTIME DESTINATION bin)
