PROJECT(tdtool)

cmake_policy(SET CMP0005 NEW)


SET(tdtool_SRCS
  main.cpp
)

ADD_EXECUTABLE(tdtool
  ${tdtool_SRCS}
)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_SOURCE_DIR}/driver
)

ADD_DEFINITIONS( -DVERSION="${DISPLAYED_VERSION}" )

IF (APPLE)
	TARGET_LINK_LIBRARIES(tdtool
		TelldusCore
	)
ELSE (APPLE)
	TARGET_LINK_LIBRARIES(tdtool
		telldus-core
	)
ENDIF (APPLE)

IF (UNIX)
	ADD_CUSTOM_COMMAND(
		TARGET tdtool
		POST_BUILD
		COMMAND help2man ./tdtool > tdtool.1
		WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
		COMMENT "Generating man file tdtool.1"
	)
ENDIF (UNIX)

INSTALL(TARGETS tdtool RUNTIME DESTINATION bin)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/tdtool.1.bz2 DESTINATION share/man/man1)
