PROJECT( telldus-core )

CMAKE_MINIMUM_REQUIRED( VERSION 2.6.0 )

IF (CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
	INCLUDE_DIRECTORIES(/usr/local/include)
	LINK_DIRECTORIES(/usr/local/lib)
ENDIF (CMAKE_SYSTEM_NAME MATCHES "FreeBSD")

cmake_policy(SET CMP0003 NEW)

SET(PACKAGE_MAJOR_VERSION 2)
SET(PACKAGE_MINOR_VERSION 0)
SET(PACKAGE_PATCH_VERSION 101)
SET(PACKAGE_VERSION "${PACKAGE_MAJOR_VERSION}.${PACKAGE_MINOR_VERSION}.${PACKAGE_PATCH_VERSION}")
SET(PACKAGE_SUBVERSION)
SET(PACKAGE_SOVERSION 2)

IF (PACKAGE_SUBVERSION)
  SET(DISPLAYED_VERSION "${PACKAGE_VERSION}_${PACKAGE_SUBVERSION}")
ELSE (PACKAGE_SUBVERSION)
  SET(DISPLAYED_VERSION ${PACKAGE_VERSION})
ENDIF(PACKAGE_SUBVERSION)

SET(BUILD_LIBTELLDUS-CORE	TRUE	CACHE BOOL "Build libtelldus-core")
SET(BUILD_LIBTELLDUS-CORE_AS_SERVICE	TRUE	CACHE BOOL "Build libtelldus-core as a service on Windows")
SET(SUPPORT_TELLSTICK_DUO FALSE CACHE BOOL "Include support for TellStick Duo")
IF (UNIX AND NOT CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
	SET(SUPPORT_USB FALSE CACHE BOOL "Build support for usb-devices")
ELSE (UNIX AND NOT CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
	SET(SUPPORT_USB TRUE CACHE BOOL "Build support for usb-devices")
ENDIF(UNIX AND NOT CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
SET(USE_QT_SETTINGS_BACKEND FALSE CACHE BOOL "Use QT as settings backend instead of the native one")

IF (APPLE)
	SET(BUILD_RFCMD		FALSE	CACHE BOOL "Build rfcmd")
ELSE (APPLE)
	SET(BUILD_RFCMD		TRUE	CACHE BOOL "Build rfcmd")
ENDIF (APPLE)
IF (CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
	SET(BUILD_RFCMD_WITH_LIBFTDI	TRUE CACHE	BOOL "Enable support for using rfcmd with libftdi (does not need kernel-driver)")
	SET(BUILD_RFCMD_WITH_SEMAPHORES	FALSE CACHE	BOOL "Enable support for using rfcmd with semaphores (Requires special kernel-config)")
ELSE(CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
	SET(BUILD_RFCMD_WITH_LIBFTDI	FALSE CACHE	BOOL "Enable support for using rfcmd with libftdi (does not need kernel-driver)")
	SET(BUILD_RFCMD_WITH_SEMAPHORES	TRUE CACHE	BOOL "Enable support for using rfcmd with semaphores")
ENDIF(CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
SET(BUILD_TDTOOL	TRUE	CACHE BOOL "Build tdtool")

SET(GENERATE_MAN	FALSE	CACHE	BOOL "Enable generation of man-files")

ADD_SUBDIRECTORY(driver)

IF(BUILD_LIBTELLDUS-CORE_AS_SERVICE)
	ADD_SUBDIRECTORY(telldus-service)
ENDIF(BUILD_LIBTELLDUS-CORE_AS_SERVICE)

if(BUILD_TDTOOL)
	ADD_SUBDIRECTORY(tdtool)
endif(BUILD_TDTOOL)

if(BUILD_RFCMD)
	ADD_SUBDIRECTORY(rfcmd)
endif(BUILD_RFCMD)

########## CPack #############
SET(CPACK_PACKAGE_NAME ${CMAKE_PROJECT_NAME})
SET(CPACK_PACKAGE_VERSION "${PACKAGE_VERSION}${PACKAGE_SUBVERSION}")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
SET(CPACK_PACKAGE_CONTACT "Micke Prag <micke.prag@telldus.se>")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Utilities for a Telldus TellStick")
SET(CPACK_PACKAGE_DESCRIPTION "Utilities and driver to control NEXA and other RF remote receivers through a TellStick USB interface")
SET(CPACK_PACKAGE_VENDOR "Telldus Technologies AB")
SET(CPACK_STRIP_FILES "usr/bin/tdtool;usr/bin/rfcmd")
# SET(CPACK_PACKAGE_INSTALL_DIRECTORY "")
# SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}")

#### .deb ####
SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6 (>= 2.7-1), libconfuse0 (>=2.6-2), udev")
SET(CPACK_DEBIAN_PACKAGE_SECTION "utils")
SET(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/debian/postinst;${CMAKE_CURRENT_SOURCE_DIR}/debian/postrm")

INCLUDE(CPack)
