PROJECT( telldus-gui )

CMAKE_MINIMUM_REQUIRED( VERSION 2.4.0 )

if(COMMAND cmake_policy)
	cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)

SET(PACKAGE_MAJOR_VERSION 2)
SET(PACKAGE_MINOR_VERSION 0)
SET(PACKAGE_PATCH_VERSION 102)
SET(PACKAGE_SOVERSION 2)
SET(PACKAGE_VERSION "${PACKAGE_MAJOR_VERSION}.${PACKAGE_MINOR_VERSION}.${PACKAGE_PATCH_VERSION}")
SET(DISPLAYED_VERSION ${PACKAGE_VERSION})

SET(BRANDING "telldus" CACHE STRING "The brand to use")

SET(UPDATE_TRANSLATIONS FALSE CACHE BOOL "Update source translation files (WARNING: make clean will delete the source .ts files! Danger!)")
SET(LANGUAGES sv)

SET(BUILD_LIBTELLDUS-GUI	TRUE	CACHE BOOL "Build libtelldus-gui")
SET(BUILD_TELLDUS-CENTER TRUE CACHE BOOL "Build TelldusCenter")

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

IF (WIN32)
	SET(TELLDUSCORE_INCLUDE_DIR	""	CACHE PATH "Path to the directory which contains telldus-core.h")
ENDIF (WIN32)

if(BUILD_LIBTELLDUS-GUI)
	ADD_SUBDIRECTORY(TelldusGui)
endif(BUILD_LIBTELLDUS-GUI)

IF (BUILD_TELLDUS-CENTER)
	ADD_SUBDIRECTORY(TelldusCenter)
	ADD_SUBDIRECTORY(Plugins)
ENDIF (BUILD_TELLDUS-CENTER)

