PROJECT( telldus-gui )

CMAKE_MINIMUM_REQUIRED( VERSION 2.4.0 )

if(COMMAND cmake_policy)
	cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)

SET(PACKAGE_MAJOR_VERSION 2)
SET(PACKAGE_MINOR_VERSION 1)
SET(PACKAGE_PATCH_VERSION 2)
SET(PACKAGE_SOVERSION 2)
SET(PACKAGE_VERSION "${PACKAGE_MAJOR_VERSION}.${PACKAGE_MINOR_VERSION}.${PACKAGE_PATCH_VERSION}")
SET(DISPLAYED_VERSION "${PACKAGE_VERSION}_rc1")

SET(BRANDING "telldus" CACHE STRING "The brand to use")

SET(UPDATE_TRANSLATIONS FALSE CACHE BOOL "Update source translation files (WARNING: make clean will delete the source .ts files! Danger!)")
SET(LANGUAGES sv)

SET(BUILD_LIBTELLDUS-GUI	TRUE	CACHE BOOL "Build libtelldus-gui")
SET(BUILD_TELLDUS-CENTER TRUE CACHE BOOL "Build TelldusCenter")

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
SET(GENERATE_MAN	FALSE	CACHE	BOOL "Enable generation of man-files")

IF(UNIX)
	SET(PLUGIN_LIB_PATH "lib" CACHE STRING "Relative path to the directory to install TelldusCenter plugin libraries into")
	SET(PLUGIN_LIB_FULL_PATH "${PLUGIN_LIB_PATH}/telldus/tellduscenter/plugins")
ENDIF ()

if(BUILD_LIBTELLDUS-GUI)
	ADD_SUBDIRECTORY(TelldusGui)
endif(BUILD_LIBTELLDUS-GUI)

IF (BUILD_TELLDUS-CENTER)
	ADD_SUBDIRECTORY(TelldusCenter)
	ADD_SUBDIRECTORY(Plugins)
ENDIF (BUILD_TELLDUS-CENTER)

